Make use of sequenced collections