@@ -59,7 +59,7 @@ public class ParamToHelperMapper extends SimpleTypeVisitor14<CodeBlock, Integer>
         }
         //check for list or map. List not yet implemented
         return switch (className.canonicalName()) {
-            case "java.util.List" -> CodeBlock.of("$N.getList($L /* $L */)", helperParam, paramNum, t.getTypeArguments().get(0).toString());
+            case "java.util.List" -> CodeBlock.of("$N.getList($L /* $L */)", helperParam, paramNum, t.getTypeArguments().getFirst().toString());
             case "java.util.Map" -> CodeBlock.of("$N.getMap($L)", helperParam, paramNum);
             default -> CodeBlock.of("$N.get$L($L)", helperParam, className.simpleName(), paramNum);
         };
